--- a/01_python_basic/02_변수와 데이터타입.ipynb
+++ b/01_python_basic/02_변수와 데이터타입.ipynb
@@ -72,6 +72,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "41\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(30)\n",
+    "# print(30 + 1)\n",
+    "# print(30 + 10)\n",
+    "\n",
+    "age = 40\n",
+    "print(age)\n",
+    "print(age +1)\n",
+    "print(age+10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -80,9 +108,9 @@
    },
    "source": [
     "  \n",
-    "### 식별자 규칙과 변수이름 주는 관례\n",
+    "### **식별자 규칙과 변수이름 주는 관례**\n",
     "\n",
-    "#### 식별자 규칙\n",
+    "#### **식별자 규칙**\n",
     "- 식별자란 파이썬에서 사용하는 것들을 구분하기 위해 주는 이름을 말한다. \n",
     "- 사용할 수 있는 문자는 **일반 문자**(영어 알파벳 뿐 만 아니라 한글 한자 등 모든 일반 문자를 사용할 수 있다.), **숫자, 특수 문자는  _(underscore) 만** 가능.\n",
     "- 숫자는 **두번째 글자** 부터 사용할 수 있다.\n",
@@ -122,7 +150,7 @@
    "source": [
     "### 변수이름 관례 종류\n",
     "- Snake 표기법\n",
-    "    모든 글자를 소문자로 한다. 여러 단어를 조합할 경우 `_` 로 구분한다.\n",
+    "    - 모든 글자를 소문자로 한다. 여러 단어를 조합할 경우 `_` 로 구분한다.\n",
     "    - user_name, bank_account, save_data\n",
     "- Camel 표기법\n",
     "    - 소문자로 시작하고 여러 단어를 조합할 경우 각 단어의 첫글자를 대문자로 한다.\n",
@@ -131,17 +159,6 @@
     "    - 소문자를 기본으로 하되 여러 단어를 조합할 경우 각 단어의 첫글자를 대문자로 한다.\n",
     "    - UserName, BankAccount, SaveData"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -161,14 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30|40|50\n",
+      "30\t40\t50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 방법1\n",
+    "print(30,40,50,sep = '|',end='\\n')\n",
+    "\n",
+    "# 방법2 (list 경우)\n",
+    "li = [30,40,50]\n",
+    "print(*li,sep = '\\t', end = '\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,14 +252,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0\n",
+      "20 30\n",
+      "20 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = b = c = 0\n",
+    "print(a,b,c)\n",
+    "\n",
+    "age1 = 20\n",
+    "age2 = 30\n",
+    "print(age1,age2)\n",
+    "\n",
+    "age1,age2 = 20,30\n",
+    "print(age1,age2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,11 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -300,14 +351,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age 메모리 주소 : 140704179131464\n",
+      "메모리 삭제\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 10\n",
+    "print(f\"age 메모리 주소 : {id(age)}\")\n",
+    "del age\n",
+    "try:\n",
+    "    print(f\" age 메모리 주소 : {id(age)}\")\n",
+    "except:\n",
+    "    print(\"메모리 삭제\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,6 +396,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 A\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'A'\n",
+    "num = 65\n",
+    "print(ord(word),chr(num))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -340,14 +430,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = None\n",
+    "print(type(age))\n",
+    "print(age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,14 +479,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23102\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0x5A3e)\n",
+    "print(0o41)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30000000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 3e7\n",
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3000_00)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000000000.0\n",
+      "0.0003\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5e9)\n",
+    "print(0.3e-3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,14 +610,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'x'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = ''\n",
+    "'o' if test else 'x'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -461,14 +649,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Insert :  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Insert : \")\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -524,12 +731,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "age :  29\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"age : \"))\n",
+    "\n",
+    "# 20대 인가\n",
+    "print(age>= 20)\n",
+    "print(20 <= age <= 29) \n",
+    "print(age // 10 == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 20대가 아닌가\n",
+    "print(not(20 <= age <=29))\n",
+    "print(age // 10 != 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((age >= 20 ) & (age<= 29 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -550,14 +830,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+\n",
+      "+\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 20\n",
+    "result = \"+\" if num >= 0  else '-'\n",
+    "print(result)\n",
+    "\n",
+    "print(\"+\" if num >= 0 else '-')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -614,14 +910,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\tb\n",
+      "a\n",
+      "b\n",
+      "a\n",
+      "b\n",
+      "c:\\users\n",
+      "c:\\users\n",
+      "aaa'aaa\n",
+      "aaa\"aaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 탭 '\\' 사용\n",
+    "print(\"a\\tb\")\n",
+    "\n",
+    "# 엔터 방법1\n",
+    "print(\"a\\nb\")\n",
+    "\n",
+    "#방법 2 \"\"\" or ''' 사용\n",
+    "st = \"\"\"a\n",
+    "b\"\"\"\n",
+    "print(st)\n",
+    "\n",
+    "# \\ 넣는법\n",
+    "# 방법1\n",
+    "print(\"c:\\\\users\")\n",
+    "# 방법2\n",
+    "print(r\"c:\\users\")\n",
+    "\n",
+    "print(\"aaa'aaa\")\n",
+    "print('aaa\"aaa')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -639,14 +969,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "130\n",
+      "6565\n",
+      "6565\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(65 + 65)\n",
+    "print(\"65\" + \"65\")\n",
+    "print(\"65\" + str(65))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -662,14 +1007,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age age age \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"age \" * 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -688,14 +1044,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a' in 'abcdef')\n",
+    "print('b' in 'adf')\n",
+    "print('b' not in 'adf')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -711,14 +1082,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('aaaa')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1019,16 +1404,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "901211\n"
+     ]
+    }
+   ],
    "source": [
     "#1. 주민번호 \"901211-1027213\"의 앞 6자리만 조회해서 출력하시오.\n",
-    "\n",
+    "st = \"901211-1027213\"\n",
+    "print(st[:6])\n",
     "\n",
     "#2. \"안녕하세요\" 를 10번 출력하시오.\n",
     "\n",
@@ -1074,7 +1469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
