--- a/01_python_basic/02_변수와 데이터타입.ipynb
+++ b/01_python_basic/02_변수와 데이터타입.ipynb
@@ -1165,21 +1165,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요. 반갑습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"안녕하세요. 반갑습니다.\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안\n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s[0])\n",
+    "print(s[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m s[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "s[0] = 'a'"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
-    }
+    },
+    "tags": []
    },
    "source": [
     "#### Slicing\n",
@@ -1200,14 +1254,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'안녕하세요. 반'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.다니습갑반 .요'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[:3:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1230,14 +1319,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름 : 이순신\n",
+      "나이 :20\n",
+      "주소 : 서울\n",
+      "이름 : 이순신\n",
+      "나이 :20\n",
+      "주소 : 서울\n",
+      "2.33\n",
+      "2.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "nm = \"이순신\"\n",
+    "age = 20\n",
+    "addr = \"서울\"\n",
+    "\n",
+    "layout = \"이름 : {}\\n나이 :{}\\n주소 : {}\".format(nm,age,addr)\n",
+    "print(layout)\n",
+    "\n",
+    "layout = f\"이름 : {nm}\\n나이 :{age}\\n주소 : {addr}\"\n",
+    "print(layout)\n",
+    "\n",
+    "fnm = 2.333333333\n",
+    "print(\"%.2f\" % fnm)\n",
+    "print(f\"{fnm:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1263,14 +1381,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름 : 이순신\n",
+      "나이 : 20\n",
+      "주소 : 서울\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"이름 : %s\\n나이 : %d\\n주소 : %s\" % (nm,age,addr))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1322,14 +1452,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'Hello', 'World!', '']\n",
+      "Hello World!\n",
+      " Hello World!\n",
+      "Hello World! \n",
+      " Hello World. \n",
+      "3\n",
+      "1\n",
+      " HELLO WORLD! \n",
+      " hello world! \n",
+      " Hello World! \n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = \" Hello World! \"\n",
+    "\n",
+    "print(st.split(\" \"))\n",
+    "\n",
+    "print(st.strip())\n",
+    "print(st.rstrip())\n",
+    "print(st.lstrip())\n",
+    "\n",
+    "print(st.replace('!','.'))\n",
+    "\n",
+    "print(st.count('l'))\n",
+    "\n",
+    "print(st.index('H'))\n",
+    "\n",
+    "print(st.upper())\n",
+    "print(st.lower())\n",
+    "\n",
+    "st.capitalize()\n",
+    "print(st)\n",
+    "\n",
+    "print(st.islower())\n",
+    "st = st.upper()\n",
+    "print(st.isupper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://www.naver.com\"\n",
+    "print(url.endswith('.com'))\n",
+    "print(url.startswith('http'))\n",
+    "\n",
+    "# url에 naver가 있는지 확인\n",
+    "# 1\n",
+    "print('naver' in url)\n",
+    "# 2\n",
+    "print(url.find('naver'))\n",
+    "\n",
+    "url.find(\"daum\")\n",
+    "\n",
+    "url.index('daum')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1354,14 +1550,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "print(bool(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "503000000.0"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(\"50.3e7\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False False\n",
+      "1316724021312\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = list()\n",
+    "print(bool(0),bool(\"\"),bool(None),bool(li))\n",
+    "print(id(li))\n",
+    "print(li)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1381,15 +1632,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **정적 타입 ex) Java**\n",
+    "\n",
+    "```java\n",
+    "public static void main(String[], **args){\n",
+    "    int a = 1;\n",
+    "    float b = 3.5;\n",
+    "}\n",
+    "```\n",
+    "##### **동적 타입 ex) Python**\n",
+    "\n",
+    "```python\n",
+    "a = 1\n",
+    "b = 3.5\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a : \"나이\" = 15\n",
+    "print(a)\n",
+    "age : int = 15\n",
+    "addr : str = 'sdafs'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1404,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1416,7 +1700,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "901211\n"
+      "901211\n",
+      "안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요\n",
+      "24\n",
+      "제품명 : TV, 가격: 300000, 제조사 : LG\n",
+      "False\n",
+      "9\n"
      ]
     }
    ],
@@ -1426,11 +1715,11 @@
     "print(st[:6])\n",
     "\n",
     "#2. \"안녕하세요\" 를 10번 출력하시오.\n",
-    "\n",
+    "print(\"안녕하세요\"*10)\n",
     "\n",
     "#3. 다음 문자열의 글자수를 출력하시오.\n",
     "str_value = \"akdlclkdkdlelql39du7마구0ㅌ\" \n",
-    "\n",
+    "print(len(str_value))\n",
     "\n",
     "#4.\n",
     "name=\"TV\"\n",
@@ -1438,18 +1727,48 @@
     "maker = \"LG\"\n",
     "# 위 변수의 값을 다음과 같은 형태로 출력하시오.\n",
     "#\"제품명 : TV, 가격 : 300000, 제조사 : LG\"\n",
-    "\n",
+    "print(f\"제품명 : {name}, 가격: {price}, 제조사 : {maker}\")\n",
     "\n",
     "#5.\n",
     "fruits = \"사과 복숭아 귤 배\"\n",
     "# 위 fruits에 \"수박\"이 있는지 확인하는 코드를 작성하시오.\n",
-    "\n",
+    "print('수박' in fruits)\n",
     "\n",
     "#6.\n",
     "str_value=\"aldkjaldjfalfjlksajfladlkaalalkdjfa\"\n",
     "# str_value 문자열안에 a가 몇개 있는지 출력하시오.\n",
-    "\n",
-    "#7. 두개의 정수를 입력받아서 곱한 결과를 출력하는 코드를 작성하세요."
+    "print(str_value.count('a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "숫자 1: 1\n",
+      "숫자 2: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7. 두개의 정수를 입력받아서 곱한 결과를 출력하는 코드를 작성하세요.\n",
+    "print(int(input(\"숫자 1:\"))*int(input(\"숫자 2:\")))"
    ]
   }
  ],
