--- a/01_python_basic/04_제어문_컴프리헨션.ipynb
+++ b/01_python_basic/04_제어문_컴프리헨션.ipynb
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 248,
    "id": "3ed47d67-b125-42c1-8530-35998ade3d56",
    "metadata": {
     "slideshow": {
@@ -1221,21 +1221,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 75\n"
+      " -1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C학점\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " \n"
+      "점수를 잘못 입력하였습니다.\n"
      ]
     }
    ],
@@ -1253,6 +1246,11 @@
     "    if not score:\n",
     "        break\n",
     "    score = int(score)\n",
+    "    \n",
+    "    if score > 100 or score < 0:\n",
+    "        print(\"점수를 잘못 입력하였습니다.\")\n",
+    "        break\n",
+    "        \n",
     "    if score > 90:\n",
     "        grade = 'A'+grade\n",
     "    elif score > 80:\n",
@@ -1560,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 252,
    "id": "a0ef95d5-5383-4754-adb9-59d036e1ee54",
    "metadata": {
     "slideshow": {
@@ -1583,14 +1581,14 @@
     "lst2 = [ 3, 20, 33, 21, 33, 8, 11, 10, 7, 17, 60, 120, 2]\n",
     "\n",
     "# 방법 1\n",
-    "print(f\"11번 답(방법 1) => {list(filter(lambda x : x % 3 == 0,lst2))}\")\n",
+    "print(f\"11번 답(방법 1) => {list(filter(lambda x : not x % 3,lst2))}\")\n",
     "# 방법 2\n",
     "print(f\"11번 답(방법 2) => {[l for l in lst2 if not l % 3]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 254,
    "id": "ea43868b-d8c5-4faf-bb51-14603f8a76da",
    "metadata": {
     "slideshow": {
@@ -1613,9 +1611,9 @@
     "file_names=[\"test.txt\", \"a.exe\", \"jupyter.bat\", \"function.exe\", \"b.exe\", \"cat.jpg\", \"dog.png\", \"run.exe\", \"i.dll\"]\n",
     "\n",
     "# 방법 1\n",
-    "print(f\"12번 답(방법 1) => {list(filter(lambda x : x.endswith('exe'), file_names))}\")\n",
+    "print(f\"12번 답(방법 1) => {list(filter(lambda x : x.endswith('.exe'), file_names))}\")\n",
     "# 방법 2\n",
-    "print(f\"12번 답(방법 2) => {[f for f in file_names if f.endswith('exe')]}\")"
+    "print(f\"12번 답(방법 2) => {[f for f in file_names if f.endswith('.exe')]}\")"
    ]
   },
   {
@@ -1650,22 +1648,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "id": "7b3ff038-c37c-4f1b-9aac-b41f4fcc510c",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14번 답(방법 1) => ['c', 'g', 'h', 'k']\n",
+      "14번 답(방법 2) => ['c', 'g', 'h', 'k']\n"
+     ]
+    }
+   ],
    "source": [
     "#(14) 다음 리스트에서 소문자만 가지는 새로운 리스트를 만드시오.\n",
     "str_list = [\"A\", \"B\", \"c\", \"D\", \"E\", \"F\", \"g\", \"h\", \"I\", \"J\", \"k\"]\n",
     "\n",
     "# 방법 1\n",
-    "print(f\"14번 답(방법 1) => {list(filter(lambda x : x.isupper(),str_list))}\")\n",
+    "print(f\"14번 답(방법 1) => {list(filter(lambda x : x.islower(),str_list))}\")\n",
     "# 방법 2\n",
-    "print(f\"14번 답(방법 2) => {}\")"
+    "print(f\"14번 답(방법 2) => {[s for s in str_list if s.islower()]}\")"
    ]
   }
  ],
