2주차 스크립트 업로드

--- a/02_python_basic/07_패키지_모듈_import.ipynb
+++ b/02_python_basic/07_패키지_모듈_import.ipynb
@@ -49,14 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00a662f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4a874a76",
    "metadata": {
@@ -220,40 +212,110 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ebd3cdd",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
+   "id": "41b9daac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my_module에 있는 함수/클래스 사용 \n",
+    "## my_module을 import를 먼저 한다.\n",
+    "# my_module.py에서 확장자는 빼고 import\n",
+    "import my_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc989d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'홍길동님 안녕하세요'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# my_module의 greet 함수 호출\n",
+    "my_module.greet(\"홍길동\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed510d64",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "홍길동님 안녕하세요\n",
-      "이름 : 이순신, 나이 : 30\n"
+      "이름: 이순신, 나이: 30\n"
      ]
     }
    ],
    "source": [
-    "# my_module에 있는 함수/클래스 사용\n",
-    "## my_module을 import\n",
-    "import my_module as mm\n",
-    "\n",
-    "print(mm.greet(\"홍길동\"))\n",
-    "p = mm.Person(\"이순신\",30)\n",
+    "p = my_module.Person(\"이순신\", 30)\n",
     "print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2e690693-a38c-47f6-bd04-eef25a9fa665",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 7,
+   "id": "7310d7e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import my_module as mm   # mm => 별칭(alias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fadf2230",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이순신님 안녕하세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = mm.greet(\"이순신\")\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "50dabcb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 강감찬, 나이: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "p2 = mm.Person(\"강감찬\", 10)\n",
+    "print(p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b1da8eec",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -265,12 +327,13 @@
    ],
    "source": [
     "%%writefile run.py\n",
-    "# run.py에서 my_module 함수 사용.\n",
+    "# run.py에서 my_module의 함수를 사용.\n",
     "import my_module as mm\n",
-    "txt = mm.greet(\"Hong\")\n",
+    "\n",
+    "txt = mm.greet(\"홍길동\")\n",
     "print(txt)\n",
     "\n",
-    "p = mm.Person(\"Lee\",30)\n",
+    "p = mm.Person(\"이순신\", 30)\n",
     "print(p)\n",
     "\n",
     "txt2 = mm.greet(p.name)\n",
@@ -279,33 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "43f9a5a3-d49e-4b6b-b272-53537e8a34ee",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hong님 안녕하세요\n",
-      "이름 : Lee, 나이 : 30\n",
-      "Lee님 안녕하세요\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python run.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "09252f4b-3a2f-43a4-808c-51bc4f4bd2a6",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 16,
+   "id": "c99890fe",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -317,58 +356,39 @@
    ],
    "source": [
     "%%writefile run2.py\n",
-    "# run.py에서 my_module 함수 사용.\n",
+    "# 모듈안의 특정 함수/클래스만 import\n",
+    "# from 모듈명 import import대상\n",
     "from my_module import greet\n",
-    "txt = greet(\"Hong\")\n",
-    "print(txt)"
+    "\n",
+    "txt = greet(\"홍길동\")\n",
+    "print(txt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d0c4c0f8-a8d4-4ac4-b668-86c12eeda46b",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 17,
+   "id": "03fd1fd4",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hong님 안녕하세요\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python run2.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "20696120-a4d8-4c75-95f5-a702b7b888a9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "이름 : Test, 나이 : 10\n"
+      "이름: 유관순, 나이: 30\n"
      ]
     }
    ],
    "source": [
     "from my_module import Person\n",
-    "p = Person(\"Test\",10)\n",
+    "\n",
+    "p = Person(\"유관순\", 30)\n",
     "print(p)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb04500c-a6f2-4644-b15e-821ef2a92d10",
+   "id": "39ebd4be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -376,7 +396,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a59d92-1129-44ea-a9bb-b469eafe1c17",
+   "id": "22913e30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "372fdf34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b68d5c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9298955",
    "metadata": {},
    "outputs": [],
    "source": []
