--- a/02_python_basic/08_예외처리 (Exception Handling).ipynb
+++ b/02_python_basic/08_예외처리 (Exception Handling).ipynb
@@ -43,7 +43,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "int(input())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,14 +102,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시작\n",
+      "1\n",
+      "결과: 10\n",
+      "프로그램 종료\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "# try - except\n",
+    "print(\"시작\")          # 1.\n",
+    "\n",
+    "try:\n",
+    "    num = int(input())     # 2.\n",
+    "    result = 10 // num     # 3.\n",
+    "    print(\"결과:\", result) # 4.\n",
+    "except:\n",
+    "    print(\"실행도중 문제가 발생했습니다.\") # 예외처리\n",
+    "    \n",
+    "print(\"프로그램 종료\")  # 5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 예외(Exception)가 발생하지 않은 경우 실행 순서\n",
+    "    - 1 => 2 => 3 => 4 => 5  (`예외처리` 는 실행이 안됨)\n",
+    "- 예외가 발생한 경우 (2번 라인에서 발생)\n",
+    "    - 1 => 2(x) => 예외처리 => 5\n",
+    "    - 실행안된 라인: 2, 3, 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시작\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "default 'except:' must be last (217652469.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[29], line 9\u001b[1;36m\u001b[0m\n\u001b[1;33m    except: # 위 두개 Exception을 제외한 나머지 Exception 을 처리하는 block\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m default 'except:' must be last\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try - except\n",
+    "print(\"시작\")          # 1.\n",
+    "\n",
+    "try:\n",
+    "    num = int(input())     # 2.\n",
+    "    result = 10 // num     # 3.\n",
+    "    print(\"결과:\", result) # 4.\n",
+    "    print(result2)\n",
+    "except ValueError:  # except Exception이름 => Exception 이름의 예외만 처리\n",
+    "    print(\"실행 도중 ValueError 발생했습니다.\") # 예외처리\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"실행 도중 ZeroDivisionError 발생함.\")\n",
+    "except: # 위 두개 Exception을 제외한 나머지 Exception 을 처리하는 block\n",
+    "    print(\"ValueError, ZDE 이외의 예외가 발생함.\")   \n",
+    "  \n",
+    "    \n",
+    "\n",
+    "print(\"프로그램 종료\")  # 5."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,14 +205,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
+    "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시작\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "정상코드-반드시 실행되야함.\n",
+      "종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"시작\")\n",
+    "try:\n",
+    "    print(1)\n",
+    "    print(2)\n",
+    "    print(aaaaaa)\n",
+    "    a = 10 /0\n",
+    "except NameError:\n",
+    "    print(3)\n",
+    "finally:\n",
+    "    print(\"정상코드-반드시 실행되야함.\")\n",
+    "\n",
+    "print(\"종료\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# run.py에서 my_module의 함수를 사용.\n",
+      "import my_module as mm \n",
+      "from my_package import calculator as c\n",
+      "\n",
+      "\n",
+      "print(\"__name__:\", __name__)\n",
+      "\n",
+      "print(\"덧셈:\", c.plus(100, 200))\n",
+      "\n",
+      "txt = mm.greet(\"홍길동\")\n",
+      "print(txt)\n",
+      "\n",
+      "p = mm.Person(\"이순신\", 30)\n",
+      "print(p)\n",
+      "\n",
+      "txt2 = mm.greet(p.name)\n",
+      "print(txt2)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run.py 파일과 연결해서 그안의 text를 읽기.\n",
+    "\n",
+    "try:\n",
+    "    # 1. 파일과 연결 => 사용\n",
+    "    fr = open(\"run.py\", encoding='UTF-8')\n",
+    "    # 2. 읽기\n",
+    "    txt = fr.read()\n",
+    "    print(txt) # 사용\n",
+    "except:\n",
+    "    print(\"처리\")\n",
+    "finally:\n",
+    "    # 3. 연결 끊기(닫기) => 사용종료\n",
+    "    fr.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,14 +307,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 월에 1  ~ 12 이외의 값이 대입됬을 때 발생시킬 Exception 클래스 정의\n",
+    "class InvalidMonthException(Exception):\n",
+    "    \n",
+    "    def __init__(self, invalid_month):\n",
+    "        # Exception이 발생된 상황과 관련된 값들을 초기화\n",
+    "        self.invalid_month = invalid_month\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        # 오류 메세지를 문자열로 반환.\n",
+    "        return f\"{self.invalid_month}는 잘못된 월입니다. 1 ~ 12 사이의 값을 넣으세요.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidMonthException",
+     "evalue": "500는 잘못된 월입니다. 1 ~ 12 사이의 값을 넣으세요.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidMonthException\u001b[0m                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Exception발생\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m InvalidMonthException(\u001b[38;5;241m500\u001b[39m)\n",
+      "\u001b[1;31mInvalidMonthException\u001b[0m: 500는 잘못된 월입니다. 1 ~ 12 사이의 값을 넣으세요."
+     ]
+    }
+   ],
+   "source": [
+    "# Exception발생\n",
+    "raise InvalidMonthException(500)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,14 +362,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a시작\n",
+      "b시작\n",
+      "c시작\n",
+      "처리==============\n",
+      "b종료\n",
+      "a종료\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "# call stack mechanism\n",
+    "def a():\n",
+    "    print(\"a시작\")\n",
+    "    b()\n",
+    "    print(\"a종료\")\n",
+    "    \n",
+    "def b():\n",
+    "    print(\"b시작\")\n",
+    "    try:\n",
+    "        c()\n",
+    "    except:\n",
+    "        print(\"처리==============\")\n",
+    "    print(\"b종료\")\n",
+    "    \n",
+    "def c():\n",
+    "    print(\"c시작\")\n",
+    "    print(1/0)\n",
+    "    print(\"c종료\")\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    a()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,6 +425,126 @@
     "        - caller는 try - except구문으로 발생한 exception을 처리하여 프로그램을 정상화 하거나 자신도 caller에게 exception을 발생시키는 처리를 한다.\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_month?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_month(month):\n",
+    "    \"\"\"월을 저장하는 함수\n",
+    "    Parameter:\n",
+    "        month: int - 저장할 월. 1 ~ 12\n",
+    "    Return:\n",
+    "    Raise:\n",
+    "        InvalidMonthException - 잘못된 월을 받았을때 발생.\n",
+    "    \"\"\"\n",
+    "    if month < 1 or month > 12:\n",
+    "#         print(\"저장할수 없음.\")\n",
+    "        raise InvalidMonthException(month)\n",
+    "        \n",
+    "    print(f\"월로 {month}를 저장합니다.\")\n",
+    "\n",
+    "def save_day(day):\n",
+    "    print(f\"일로 {day}를 저장합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "처리 -10는 잘못된 월입니다. 1 ~ 12 사이의 값을 넣으세요.\n",
+      "다음작업\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    save_month(-10)\n",
+    "    save_day(3)\n",
+    "except InvalidMonthException as e:  # e: 발생된 Exception객체를 받을 변수\n",
+    "    print('처리', e)\n",
+    "    \n",
+    "print(\"다음작업\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
