--- a/02_python_basic/09_입출력.ipynb
+++ b/02_python_basic/09_입출력.ipynb
@@ -64,14 +64,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Py_Class\\Data_Track\\02_python_basic\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# os.chdir(r\"c:\\source\")\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +132,7 @@
     "    - Program이 외부로 데이터를 써주는 흐름.\n",
     "\n",
     "\n",
-    "![io](images/ch09_01.png)"
+    "![io](../images/ch09_01.png)"
    ]
   },
   {
@@ -107,7 +144,7 @@
    },
    "source": [
     "## IO 코딩 순서\n",
-    "![순서](images/ch09_02.png)"
+    "![순서](../images/ch09_02.png)"
    ]
   },
   {
