--- a/03_크롤링/02_requests.ipynb
+++ b/03_크롤링/02_requests.ipynb
@@ -1040,10 +1040,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bytes'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "img_url = \"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh2ii7B8VWWNk1dPQTbv07e0Q26dUV1oIO-Q&usqp=CAU\"\n",
+    "res = requests.get(img_url)\n",
+    "if res.status_code ==200:\n",
+    "    print(type(res.content))\n",
+    "    # 바이너리 파일 -> res.content\n",
+    "    with open(\"down_image.jpg\",\"wb\") as fw:\n",
+    "        fw.write(res.content)\n",
+    "else:\n",
+    "    print(res.status_code)"
+   ]
   },
   {
    "cell_type": "code",
