--- a/03_크롤링/03_Selenium.ipynb
+++ b/03_크롤링/03_Selenium.ipynb
@@ -28,7 +28,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !터미널 명령어\n",
+    "!pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install webdriver-manager"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,24 +76,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Playdata\\.wdm\\drivers\\chromedriver\\win64\\120.0.6099.109\\chromedriver-win32/chromedriver.exe\n"
+     ]
+    }
+   ],
    "source": [
-    "### 다운 받은 Driver이용해 WebDriver생성"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "# driver를 다운로드 받기.\n",
+    "driver = ChromeDriverManager().install() # 다운받은 경로를 반환\n",
+    "print(driver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'selenium.webdriver.chrome.webdriver.WebDriver'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "service = Service(excutable_path=driver) #driver경로를 넣어서 생성.\n",
+    "browser = webdriver.Chrome(service=service)\n",
+    "print(type(browser)) # 웹브라우저(크롬)을 관리하는 객체"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.get(\"https://www.naver.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.get(\"https://www.daum.net\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.close() # 끄기"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,17 +215,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.15.2'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import selenium\n",
+    "selenium.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# webbrowser(크롬)을 실행.\n",
+    "service = Service(executable_path=driver)\n",
+    "browser = webdriver.Chrome(service=service)\n",
+    "\n",
+    "# url로 이동 (naver)\n",
+    "browser.get(\"https://www.naver.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html lang=\"ko\" class=\"fzoom\" data-dark=\"false\"><head><script async=\"\" src=\"https://ntm.pstatic.net/ex/nlog.js\"></script><script async=\"\" src=\"https://ntm.pstatic.net/scripts/ntm_27291e35193e.js\"></script><script async=\"\" type=\"text/javascript\" src=\"https://ssl.pstatic.net/tveta/libs/ndpsdk/prod/ndp-core.js\"></script> <meta charset=\"utf-8\"> <meta name=\"Referrer\" content=\"origin\"> <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\"> <meta name=\"viewport\" content=\"width=1190\"> <title>NAVER</title> <meta name=\"apple-mobile-web-app-title\" content=\"NAVER\"> <meta name=\"robots\" content=\"index,nofollow\"> <meta name=\"description\" content=\"네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요\"> <meta property=\"og:title\" content=\"네이버\"> <meta property=\"og:url\" content=\"https://www.naver.com/\"> <meta property=\"og:image\" content=\"https://s.pstatic.net/static/www/mobile/edit/2016/0705/mobile_212852414260.png\"> <meta property=\"og:description\" content=\"네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요\"> <meta name=\"twitter:card\" content=\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# html 소스코드를 조회 -> BeautifulSoup 이용해서 데이터 추출\n",
+    "html = browser.page_source\n",
+    "print(html[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 화면크기를 최대화\n",
+    "browser.maximize_window()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 화면 캡쳐\n",
+    "browser.get_screenshot_as_file(\"naver_main.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.set_window_size(1000, 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'width': 1000, 'height': 500}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "browser.get_window_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.maximize_window()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'selenium.webdriver.remote.webelement.WebElement'>\n",
+      "input query\n"
+     ]
+    }
+   ],
+   "source": [
+    "textfield = browser.find_element(By.ID, \"query\")\n",
+    "print(type(textfield))\n",
+    "print(textfield.tag_name, textfield.get_attribute(\"name\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 키보드 입력 -> 글자들을 입력\n",
+    "textfield.clear()\n",
+    "textfield.send_keys(\"날씨\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "textfield.send_keys(Keys.ENTER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "textfield2 = browser.find_element(By.ID,\n",
+    "                                  \"nx_query\")\n",
+    "textfield2.clear()\n",
+    "textfield2.send_keys(\"미세먼지\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "button\n"
+     ]
+    }
+   ],
+   "source": [
+    "submit_btn = browser.find_element(By.CLASS_NAME,\n",
+    "                                  \"bt_search\")\n",
+    "print(submit_btn.tag_name)\n",
+    "submit_btn.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +447,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Welcome to Python.org\n",
+    "Python - 파이썬\n",
+    "파이썬 - 위키백과, 우리 모두의 백과사전"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "Welcome to Python.org\n",
+      "Python - 나무위키:대문\n",
+      "파이썬 - 위키백과, 우리 모두의 백과사전\n",
+      "1. 파이썬 시작하기 - 왕초보를 위한 Python\n",
+      "Python Tutorial - W3Schools\n",
+      "Python란 무엇인가요? - Python 언어 설명 - AWS\n",
+      "Python이란? | 테라데이타\n",
+      "파이썬 코딩 무료 강의 (기본편) - 6시간 뒤면 여러분도 개발자가 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "option = webdriver.ChromeOptions()\n",
+    "option.add_argument(\"--headless\")\n",
+    "\n",
+    "driver = ChromeDriverManager().install()\n",
+    "service = Service(executable_path=driver)\n",
+    "browser = webdriver.Chrome(service=service, options=option) # 브라우져 띄우기.\n",
+    "\n",
+    "# 구글 이동\n",
+    "browser.get(\"https://www.google.co.kr/\")\n",
+    "# 키워드 입력필드를 조회\n",
+    "keyword_tf = browser.find_element(By.ID, \"APjFqb\") #(By.NAME, 'q')\n",
+    "# 검색 키워들 입력\n",
+    "keyword_tf.send_keys(\"python\")\n",
+    "keyword_tf.send_keys(Keys.ENTER)\n",
+    "\n",
+    "# import time\n",
+    "# time.sleep(5)\n",
+    "# title_list = browser.find_elements(By.CSS_SELECTOR, \n",
+    "#                                    \".LC20lb.MBeuO.DKV0Md\")\n",
+    "# element를 가져올 수있을때 까지 10초까지 대기\n",
+    "title_list = WebDriverWait(browser, 10).until(\n",
+    "    EC.presence_of_all_elements_located((By.CSS_SELECTOR, \".LC20lb.MBeuO.DKV0Md\"))\n",
+    ")\n",
+    "# EC.presence_of_all_elements_located()  -- find_elements()\n",
+    "# EC.presence_of_element_located() -- find_element()\n",
+    "\n",
+    "print(len(title_list))\n",
+    "for tag in title_list:\n",
+    "    print(tag.text)\n",
+    "browser.close()"
+   ]
   },
   {
    "cell_type": "code",
@@ -206,10 +545,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "option = webdriver.ChromeOptions()\n",
+    "option.add_argument(\"--headless\")\n",
+    "\n",
+    "service = Service(executable_path=driver)\n",
+    "browser = webdriver.Chrome(service=service, options=option)\n",
+    "\n",
+    "browser.get(\"https://www.naver.com\")\n",
+    "browser.get_screenshot_as_file(\"page_image.png\")\n",
+    "browser.close()"
+   ]
   },
   {
    "cell_type": "code",
@@ -263,6 +612,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 무한 스크롤\n",
+    "- 페이징 처리 대신 스크롤을 내리면 목록 내용이 추가되도록 하는 방식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.youtube.com\"\n",
+    "\n",
+    "driver = ChromeDriverManager().install()\n",
+    "service = Service(executable_path=driver)\n",
+    "browser = webdriver.Chrome(service=service)\n",
+    "\n",
+    "browser.maximize_window()\n",
+    "browser.get(url)\n",
+    "# time.sleep(3)\n",
+    "# browser.execute_script(\"자바스크립트 코드\") -> 자바스크립트 코드가 브라우저에서 실행된다.\n",
+    "# document.documentElement.scrollHeight 세로 스크롤 길이(페이지의 height 길이.)\n",
+    "scroll_pane_height = browser.execute_script(\"return document.documentElement.scrollHeight\")\n",
+    "while True:\n",
+    "    # scroll 이동 - window.scrollTo(가로스크롤이동할위치, 세로스크롤이동할위치)\n",
+    "    browser.execute_script(\"window.scrollTo(0, document.documentElement.scrollHeight)\")\n",
+    "    time.sleep(1)\n",
+    "    # 이동후 height길이 조회\n",
+    "    new_scroll_height = browser.execute_script(\"return document.documentElement.scrollHeight\")\n",
+    "    if scroll_pane_height == new_scroll_height:\n",
+    "        break #  스크롤 이동을 멈춘다.\n",
+    "    scroll_pane_height = new_scroll_height\n",
+    "\n",
+    "# 페이지에서 원하는 항목 추출   \n",
+    "browser.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 트립어드바이저"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time\n",
+    "\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### 1페이지 리뷰 조회\n",
+    "review_list = []\n",
+    "\n",
+    "url = \"https://www.tripadvisor.co.kr/Restaurant_Review-g294197-d3200324-Reviews-or50-Jungsik-Seoul.html\"\n",
+    "\n",
+    "service = Service(executable_path=ChromeDriverManager().install())\n",
+    "browser = webdriver.Chrome(service=service)\n",
+    "\n",
+    "browser.get(url)\n",
+    "\n",
+    "\n",
+    "more_btn = WebDriverWait(browser, 10).until(\n",
+    "    EC.presence_of_element_located((By.CSS_SELECTOR, \".taLnk.ulBlueLinks\"))\n",
+    ")\n",
+    "more_btn.click()\n",
+    "\n",
+    "time.sleep(1)  # 내용이 나오기 까지 1초정도 대기\n",
+    "# html->str 조회\n",
+    "html_txt = browser.page_source\n",
+    "soup = BeautifulSoup(html_txt, \"lxml\")\n",
+    "tag_list = soup.select(\".partial_entry\")\n",
+    "\n",
+    "for tag in tag_list:\n",
+    "    review_list.append(tag.get_text().strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 전체 리뷰 조회\n",
+    "review_list = []\n",
+    "\n",
+    "url = \"https://www.tripadvisor.co.kr/Restaurant_Review-g294197-d3200324-Reviews-or50-Jungsik-Seoul.html\"\n",
+    "\n",
+    "service = Service(executable_path=ChromeDriverManager().install())\n",
+    "browser = webdriver.Chrome(service=service)\n",
+    "\n",
+    "browser.get(url)\n",
+    "# 반복문 안에서 한페이지 리뷰 조회하는 코드를 실행.\n",
+    "# 반복문은 `다음` 버튼을 클릭할 수없을때 까지 반복\n",
+    "while True:\n",
+    "    more_btn = WebDriverWait(browser, 10).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, \".taLnk.ulBlueLinks\"))\n",
+    "    )\n",
+    "    more_btn.click()\n",
+    "\n",
+    "    time.sleep(1)  # 내용이 나오기 까지 1초정도 대기\n",
+    "    # html->str 조회\n",
+    "    html_txt = browser.page_source\n",
+    "    soup = BeautifulSoup(html_txt, \"lxml\")\n",
+    "    tag_list = soup.select(\".partial_entry\")\n",
+    "\n",
+    "    for tag in tag_list:\n",
+    "        review_list.append(tag.get_text().strip())\n",
+    "        \n",
+    "    ## 다음 버튼 클릭 \n",
+    "    try:\n",
+    "        next_btn = WebDriverWait(browser, 5).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, \"#taplc_location_reviews_list_resp_rr_resp_0 > div > div:nth-child(12) > div > div > a.nav.next.ui_button.primary\"))\n",
+    "        )\n",
+    "        next_btn.click()\n",
+    "    except:\n",
+    "        # selector의 다음 버튼이 없다.\n",
+    "        break\n",
+    "    time.sleep(1)\n",
+    "print(\"종료\")   \n",
+    "browser.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(review_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -286,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
